--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-typescript": "^3.9.0",
     "@vue/cli-service": "^3.9.3",
     "node-sass": "^4.12.0",
+    "raw-loader": "^3.1.0",
     "sass-loader": "^7.0.1",
     "typescript": "^3.5.3",
     "vue-template-compiler": "^2.6.10",
